--- a/.github/workflows/build-golang.yml
+++ b/.github/workflows/build-golang.yml
@@ -1,13 +1,12 @@
 name: Build Golang
 
 on:
-  push:
-    branches: [ master, native-schema-registry-2025, native-schema-registry-csharp, native-schema-registry-golang, native-schema-trunk ]
-  pull_request:
-    branches: [ master, native-schema-registry-2025, native-schema-registry-csharp, native-schema-registry-golang, native-schema-trunk ]
-  release:
-    branches: [ master, native-schema-registry-2025, native-schema-registry-csharp, native-schema-registry-golang, native-schema-trunk ]
-    types: [ created ]
+  workflow_dispatch:
+    inputs:
+      pr_branch:
+        description: 'Branch to test'
+        required: true
+  
 permissions:
   id-token: write
   contents: read
