Add id-token write permission to build-golang workflow
Configure job-level permissions to enable OIDC token access while maintaining content read access and reorganizing the continue-on-error setting.

--- a/.github/workflows/build-golang.yml
+++ b/.github/workflows/build-golang.yml
@@ -13,8 +13,10 @@ permissions:
   contents: read
 jobs:
   build-golang:
-
-    continue-on-error: false
+    permissions:
+      id-token: write
+      contents: read
+      continue-on-error: false
     timeout-minutes: 60
     runs-on: ubuntu-latest
     container:
