Allow unsecure Node.js version in build workflow
Add ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION environment variable to the GitHub Actions build job to bypass Node.js version restrictions.

--- a/.github/workflows/build-golang.yml
+++ b/.github/workflows/build-golang.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: amazonlinux:2023
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
     services:
       zookeeper:
         image: bitnami/zookeeper:latest
