--- a/native-schema-registry/src/main/resources/resource-config.json
+++ b/native-schema-registry/src/main/resources/resource-config.json
@@ -3,6 +3,15 @@
     "includes": [
       {
         "pattern": ".*/.*proto$"
+      },
+      {
+        "pattern": "google/.*\\.proto$"
+      },
+      {
+        "pattern": "google/protobuf/.*\\.proto$"
+      },
+      {
+        "pattern": "\\.proto$"
       }
     ]
   }
