--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -28,6 +28,12 @@
     </description>
     <url>https://aws.amazon.com/glue</url>
     <packaging>jar</packaging>
+    <parent>
+        <groupId>software.amazon.glue</groupId>
+        <artifactId>schema-registry-parent</artifactId>
+        <version>1.1.25</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <developers>
         <developer>
@@ -66,7 +72,7 @@
         <dependency>
             <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
-    <version>1.1.25</version>
+            <version>1.1.25</version>
         </dependency>
         <dependency>
           <groupId>org.projectlombok</groupId>
@@ -205,7 +211,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                <source>8</source>
+                    <source>8</source>
                 </configuration>
                 <executions>
                     <execution>
