--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>integration-tests</module>
         <module>jsonschema-kafkaconnect-converter</module>
         <module>protobuf-kafkaconnect-converter</module>
+        <module>native-schema-registry</module>
     </modules>
 
     <properties>
