Setup initial integ-tests module and onboard configuration validation tests for C# (#453)
* Fix getCtype errors with Protobuf parsing

* Write configuration tests

* Clean up the configuration validation integ tests - simplify exception flows + remove unnecessary logging + Onboard C# AWS SDK Glue library in tests module

* Implement invalid region in config test

* Publish configs as shared resources + write invalid endpoint test

* Add setup and teardown methods + use region-specific clients

---------

Co-authored-by: Ravindranath Kakarla <rnath@amazon.com>

--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.Glue" Version="3.7.300" />
+        <PackageReference Include="AWSSDK.Core" Version="3.7.300" />
         <PackageReference Include="Google.Api.CommonProtos" Version="2.6.0" />
         <PackageReference Include="Google.Protobuf" Version="3.32.1" />
         <PackageReference Include="Grpc.Tools" Version="2.48.1">
