--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
@@ -9,6 +9,10 @@
     <ItemGroup>
         <PackageReference Include="AWSSDK.Glue" Version="3.7.300" />
         <PackageReference Include="AWSSDK.Core" Version="3.7.300" />
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="Google.Api.CommonProtos" Version="2.6.0" />
         <PackageReference Include="Google.Protobuf" Version="3.21.4" />
         <PackageReference Include="Grpc.Tools" Version="2.48.1">
@@ -47,10 +51,7 @@
     </ItemGroup> -->
 
      <ItemGroup>
-        <Protobuf Include="../../../shared/test/protos/*.proto"
-                 ProtoRoot="../../../shared/test/protos/"
-                 GrpcServices="None"
-                 OutputDir=".proto/" />
+        <Protobuf Include="../../../shared/test/protos/*.proto" ProtoRoot="../../../shared/test/protos/" GrpcServices="None" OutputDir=".proto/" />
 	    <Compile Include=".proto/*.cs" />
      </ItemGroup>
 </Project>
