--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -98,10 +98,25 @@ jobs:
             -w "$(pwd)/native-schema-registry/csharp/AWSGsrSerDe" \
             mcr.microsoft.com/dotnet/sdk:8.0-alpine \
             sh -c "
-              # First build - expected to fail but continue workflow
-              dotnet build . || echo 'First build failed as expected'
-              # Second build - should succeed  
+              # First build - fails because protoc doesn't work with Alpine (musl libc based image)
+              dotnet clean . && dotnet build . || true
+              
+              # Workaround because protoc from grpc.tools is not compatible with Alpine
+              # This is only for the protoc compilation, and does not affect functionality of the library
+              apk update && \
+              apk --no-cache add libc6-compat && \
+              apk --no-cache add \
+              -X https://dl-cdn.alpinelinux.org/alpine/v3.17/main \
+              -X https://dl-cdn.alpinelinux.org/alpine/v3.17/community \
+              protobuf=3.21.9-r0 && \
+              cd /root/.nuget/packages/grpc.tools/2.48.1/tools/linux_x64 && \
+              rm protoc && \
+              ln -s /usr/bin/protoc protoc && \
+              chmod +x grpc_csharp_plugin
+              
+              # Need to build it twice due to protobuf compilation misorder (normal for csharp builds today)
               dotnet build .
+              
               # Only run unit tests as a part of the workflow
               dotnet test . --filter 'JsonSerializerTest | AvroSerializerTest | JsonDeserializerTest | AvroDeserializerTest | (ProtobufSerializerTest&FullyQualifiedName!~KafkaFlow) | (ProtobufDeserializerTest&FullyQualifiedName!~KafkaFlow)' --no-build
             "
