--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -112,7 +112,8 @@ jobs:
               cd /root/.nuget/packages/grpc.tools/2.48.1/tools/linux_x64 && \
               rm protoc && \
               ln -s /usr/bin/protoc protoc && \
-              chmod +x grpc_csharp_plugin
+              chmod +x grpc_csharp_plugin && \
+              cd /workspace/native-schema-registry/csharp/AWSGsrSerDe
               
               # Need to build it twice due to protobuf compilation misorder (normal for csharp builds today)
               dotnet build .
