Add dotnet index in opensuse os

--- a/.github/workflows/build-csharp.yml
+++ b/.github/workflows/build-csharp.yml
@@ -115,7 +115,9 @@ jobs:
             extra_packages: ""
             dotnet_setup: |
               rpm -Uvh https://packages.microsoft.com/config/opensuse/15/packages-microsoft-prod.rpm
-              zypper install -y dotnet-sdk-8.0
+              rpm --import https://packages.microsoft.com/keys/microsoft.asc
+              zypper refresh
+              zypper install -y --no-gpg-checks dotnet-sdk-8.0
 
     container:
       image: ${{ matrix.distro }}
