--- a/.github/workflows/build-csharp.yml
+++ b/.github/workflows/build-csharp.yml
@@ -59,7 +59,6 @@ jobs:
           - amazonlinux:2023
           - ubuntu:22.04
           - fedora:40
-          - opensuse/leap:15.6
         include:
           - distro: amazonlinux:2023
             package_manager: yum
@@ -103,21 +102,6 @@ jobs:
             dotnet_setup: |
               rpm -Uvh https://packages.microsoft.com/config/fedora/37/packages-microsoft-prod.rpm
               dnf install -y dotnet-sdk-8.0
-              
-          - distro: opensuse/leap:15.6
-            package_manager: zypper
-            update_cmd: "zypper refresh"
-            install_cmd: "zypper install -y"
-            group_install_cmd: "zypper install -y -t pattern devel_basis"
-            clang_tools: "clang-tools"
-            pcre_dev: "pcre2-devel"
-            cpp_compiler: "gcc-c++"
-            extra_packages: ""
-            dotnet_setup: |
-              rpm -Uvh https://packages.microsoft.com/config/opensuse/15/packages-microsoft-prod.rpm
-              rpm --import https://packages.microsoft.com/keys/microsoft.asc
-              zypper refresh
-              zypper install -y dotnet-sdk-8.0
 
     container:
       image: ${{ matrix.distro }}
@@ -166,6 +150,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Maven 3.9.11
+        shell: bash
         run: |
           curl -sSL https://downloads.apache.org/maven/maven-3/3.9.11/binaries/apache-maven-3.9.11-bin.tar.gz | tar xz
           mv apache-maven-3.9.11 /opt/maven
